fix: checkbox tick alignment

--- a/src/ui/checkbox.css
+++ b/src/ui/checkbox.css
@@ -32,7 +32,7 @@
     position: absolute;
     content: '';
 
-    top: 5px;
+    top: 6px;
     left: 6px;
     height: 6px;
     width: 10px;
